--- a/src/app/globals.sass
+++ b/src/app/globals.sass
@@ -5,14 +5,16 @@
     box-sizing: border-box
     
 .container
-    max-width: 1320px
+    max-width: 1280px
     margin: 0 4%
 
-.main
-    background-color: variables.$bg
-    height: 100vh
-    padding: 16px
+.container-grid
+    max-width: 1280px
+    margin-left: auto
+    margin-right: auto
+    padding: 80px 100px
 
+/*navbar style*/
 .navbar
     position: fixed
     top: 0
@@ -38,3 +40,17 @@
     font-weight: 300
     line-height: 19px
     padding: 19px 10px
+
+.main
+    background-color: variables.$bg
+    height: 100vh
+    width: 100vw
+    padding: 100px
+
+.grid
+    display: grid
+    grid-template-columns: repeat(4, 3fr)
+    grid-gap: 20px
+
+.card
+    background-color: red
