consuming api and card styles

--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -3,13 +3,14 @@
 $font-family: 'Montserrat, sans-serif'
 
 /*fonts-size*/
-$title: 40px
+$title: 16px
 $subtitle: 20px
 $card-title: 16px    
 $price-font: 15px
 $description-font: 10px
 
 /*colors*/    
+$bg-font: #373737
 $white: #FFF
 $blue: #0F52BA
 $bg: #F9F9F9
