--- a/src/app/globals.sass
+++ b/src/app/globals.sass
@@ -12,7 +12,7 @@
     max-width: 1280px
     margin-left: auto
     margin-right: auto
-    padding: 80px 100px
+    padding: 80px 0
 
 /*navbar style*/
 .navbar
@@ -50,7 +50,74 @@
 .grid
     display: grid
     grid-template-columns: repeat(4, 3fr)
-    grid-gap: 20px
+    grid-column-gap: 15px
+    grid-row-gap: 30px
 
 .card
-    background-color: red
+    background-color: variables.$white
+    width: 230px
+    height: 300px
+    display: flex
+    flex-direction: column
+    border-radius: 8px
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.135216)
+
+    .img
+        padding: 1rem
+        position: relative
+        max-height: 288px
+        flex: 1 1 0%
+
+    .card-title
+        padding: 1rem
+        display: flex
+        justify-content: space-between
+        color: #000
+        font-size: variables.$title
+        size: 16px
+        line-height: 19px
+        font-weight: 400
+
+        .price
+            padding: 5px
+            max-width: 70px
+            max-height: 26px 
+            font-size: variables.$price-font
+            font-weight: 700
+            size: 100%
+            line-height: 15px
+            background-color: variables.$bg-font
+            color: variables.$white 
+            border-radius: 5px
+    
+    .description
+        font-size: variables.$description-font
+        font-weight: 300
+        size: 10px
+        line-height: 12px
+        font-style: normal
+        padding: 5px 1rem
+        padding-top: 0
+        padding-bottom: 5px
+
+    .button
+        border-radius: 0 0 5px 5px
+        width: 100%
+        height: 31px
+        background: variables.$blue
+        border: none
+        margin-bottom: -8%
+        /*font*/
+        text-transform: uppercase
+        font-style: normal
+        font-weight: 600
+        size: 14px
+        font-size: 14px
+        line-height: 18px
+        color: variables.$white
+        letter-spacing: 1px
+        cursor: pointer 
+
+        .cart-svg
+            margin: -2.5px 6px 
+
